nav mobile overflow spaced fixd

--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -71,7 +71,7 @@ a maximum width of 767 pixels or less */
     position: relative;
     height: 100vh;
     ul {
-      margin-top: 30vh; // 47px
+      margin-top: 20vh; // 47px
       margin-left: 16px;
       display: inline-flex;
       flex-direction: column;
@@ -113,7 +113,7 @@ a maximum width of 767 pixels or less */
     position: absolute;
     transform: translate(-50%, -50%);
     left: 50%;
-    bottom: 0%;
+    bottom: 5.5%;
   }
 
   nav.close {
